--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,14 @@ body {
 .animate-glitter {
   animation: glitter 3s infinite;
 }
+
+html {
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  height: 100%;
+}
+
+section {
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
+}
